<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.user.petunjuk.fragment.BagianBFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--  Judul View         -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/BagianB_BidangKeahlianKompetensi"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginTop="8dp"
                android:textSize="@dimen/isi_petunjuk"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:text="@string/BagianB_Keterangan1"
                />

            <!--  List View         -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_petunjuk_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>


            <!--  Tabel View         -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginTop="8dp"
                android:textSize="@dimen/isi_petunjuk"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:text="@string/Contoh"
                />
            <TableLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:id="@+id/rowlay"
                    android:background="@android:color/holo_blue_light"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:text="@string/No" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:text="@string/BagianB_FieldTabel"
                        android:gravity="start"/>
                    <TextView
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:layout_width="40dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:text="@string/Y"
                        android:textColor="@android:color/black"
                        android:gravity="center"/>
                    <TextView
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:layout_width="40dp"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"
                        android:text="@string/T"
                        android:gravity="center"/>
                </TableRow>

                <TableRow
                    android:background="#ECEFF1"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/_1" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:text="@string/BagianB_Ex_1" />
                    <TextView
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="" />
                    <TextView
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/X" />
                </TableRow>

            </TableLayout>

            <!--  Keterangan Bottom View         -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginTop="16dp"
                android:textSize="@dimen/isi_petunjuk"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:text="@string/Keterangan"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginTop="8dp"
                android:textSize="@dimen/isi_petunjuk"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:text="@string/BagianB_Keterangan2"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginTop="8dp"
                android:textSize="@dimen/isi_petunjuk"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/BagianB_Keterangan3"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>